fix: fix too small line height of git-desc.

--- a/src/components/Table/index.module.css
+++ b/src/components/Table/index.module.css
@@ -71,6 +71,8 @@
 
 .git-desc {
   font-size: 0.5rem;
+  line-height: 1rem;
+  padding: 0.2rem 0 !important;
 }
 
 
